# rust-sqlx-experiment01

./: .env  Cargo.toml  README.md
migrations/: 2020_schema.sql
src/: main.rs
