[package]
name = "rust-sqlx-experiment01"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
sqlx = { version = "0.4.1", features = [ "sqlite", "chrono", "uuid", "runtime-async-std-native-tls" ] }
async-std = { version = "1.8", features = [ "attributes" ] }
